assets/css/style.css
/*-------------------------- Import Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');

body {
    background: linear-gradient(rgba(0, 0, 0, 0.7),
        rgba(0, 0, 0, 0.7)), url('../images/cover.jpg') no-repeat, center, center, fixed;
    background-size: cover;
    background-position: center;
    height: 100vh;
    margin: 0 auto;
    font-size: 16px;
}

.col-md-6 {
    padding-left: 0;
    padding-right: 0;
    margin: 0 auto;
 }

/*-------------------------- Ttles, subtitles and special text */

h1 {
    font-family: 'Trajan-Pro-3', serif;
    padding-top: 6rem;
    color: #fafafa;
    font-size: 2.5rem;
    text-transform: uppercase;
    letter-spacing: 2px;
}

/*-------------------------- Header and Navigation */

.bg-dark {
    background-color: #0a0b0c !important;
}

.navbar-brand {
    font-family: 'Trajan-Pro-3', serif;
    font-weight: 300;
    font-style: normal;
    text-transform: uppercase;
    font-size: 1.3rem;
}

.nav-link {
    font-family: 'Futura-PT', sans-serif;
    font-size: 1.15rem;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #fafafa;
    font-weight: 300;
}

/*-------------------------- Quiz Questions */

.quiz-column {
    font-family: 'Futura-PT', sans-serif;
    text-align: center;
    background: rgba(0, 0, 0, 0.7);
    padding-top: 30px;
}

#question {
    font-family: 'Trajan-Pro-3', serif;
    font-size: 1.5rem;
    color: #fafafa;
    padding: 60px 30px;
    margin: 0px auto;
}

#progress {
    color: #DBD8D8;
    text-shadow: 1px 1px 2px #b00d0d;
    font-size: 1rem;
    text-align: center;
    margin-top: 4rem;
    font-family: 'Trajan-Pro-3', serif;
    padding-bottom: 20px;
}

/*-------------------------- Multiple Choice Questions */

.answer-column {
    font-family: 'Futura-PT', sans-serif;
    background-color: rgba(94, 8, 8, .7);
    text-align: center;
    padding-top: 30px;
}

.buttons {
    font-weight: 300px;
    padding: 60px 30px;
    text-align: center;
    vertical-align: middle;
    display: inline-grid;
}

span {
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 1.158rem;
}
 
button#btn0, button#btn1, button#btn2, button#btn3 {
    background-color: #000;
    width: 250px;
    font-size: 1.1rem;
    color: #fff;
    margin: 20px 40px 20px 40px;
    padding: 20px 20px;
    border: 1px solid #000;
}
 
button#btn0:hover, button#btn1:hover, button#btn2:hover, button#btn3:hover {
    cursor: pointer;
    background-color: #b00d0d;
}
 
button#btn0:focus, button#btn1:focus, button#btn2:focus, button#btn3:focus {
    outline: 0;
}

#score {
    font-family: 'Trajan-Pro-3', serif;
    text-transform: uppercase;
    color: #DBD8D8;
    text-align: center;
    font-size: 20px;
}

/*--------------------------  Modal */
/* Styles for receding modal dialog copied from csstricks <https://css-tricks.com/receding-background-modal-boxes/> */
.modal-body {
    background-color: #0a0b0c;
    color: #fafafa;
    font-family: 'Trajan-Pro-3', serif;
    padding-top: 20px;
    border-color: none;
    border: none;
}

.modal-title {
    font-size: 1.5rem;
    margin-top: 20px;
}

.modal-footer {
     color: #fafafa;
     font-family: 'Trajan-Pro-3',
     serif;
     text-align: center;
     border: none;
     background-color: #0a0b0c;
     padding-bottom: 40px;
}

div#description {
    padding: 30px 10px 10px 10px;
    text-align: center;
    font-size: 1rem;
    font-family: 'Futura-PT', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1.2px;
    font-weight: 200;
}

.modal-header {
    font-family: 'Trajan-Pro-3', serif;
    text-align: center;
    color: #fafafa;
    font-size: 2rem;
    background-color: #0a0b0c;
}

span {
    color: #fafafa;
}

span:hover {
    color: #fafafa;
}

button#close-modal {
    background-color: rgb(94, 8, 8);
    border: none;
    color: #fafafa;
}

#close-modal:hover {
    background-color: #b00d0d;
    color: #fafafa;
}

img {
    width: 100%;
    height: auto;
    position: relative;
    margin: 0 auto;
}

.modal-open {
    overflow: visible;
}

/*-------------------------- Media Queries */
@media only screen and (min-width: 768px) {
    .quiz-column {
        text-align: center;
        height: 100vh;
    } 
    #question {
        font-size: 25px;
        color: #fafafa;
        padding-top: 230px;
        padding-left: 20px;
        padding-right: 20px;
        padding-bottom: 20px;
        margin: 0px 80px;
    }
    .buttons {
        margin-top: 150px;
        padding: 60px 20px;
        text-align: center;
        vertical-align: middle;
        display: inline-grid;
    } 
    .answer-column {
        height: 100vh;
        font-family: 'Futura-PT', sans-serif;
        background-color: rgba(94, 8, 8, .6);
        text-align: center;
    }
    #progress {
        color: #fafafa;
        font-size: 1rem;
        text-align: center;
        margin-top: 10rem;
    }
    button#btn0, button#btn1, button#btn2, button#btn3 {
        background-color: #0a0b0c;
        font-size: 1.5rem;
        color: #fff;
        margin: 20px 40px 20px 40px;
        padding: 20px 20px;
        border: none;
    }
    h1 {
        padding-top: 15rem;
    }
    .modal-open {
        overflow: visible;
    }
    .modal-full {
        max-width: 50%;
    }
    .modal-title {
        font-size: 2rem;
    }
    div#description {
        font-size: 1.2rem;
    }
}

